--- a/graph-accelerator/pom.xml
+++ b/graph-accelerator/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.apache.spark</groupId>
-    <artifactId>sophon-graph</artifactId>
-    <version>1.2.0</version>
+    <artifactId>boostkit-graph</artifactId>
+    <version>1.3.0</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.spark.graphx.lib</groupId>
-  <artifactId>sophon-graph-acc_2.11</artifactId>
-  <version>1.2.0</version>
+  <artifactId>boostkit-graph-acc_2.11</artifactId>
+  <version>1.3.0</version>
   <name>${project.artifactId}</name>
   <description>Spark graph algo accelerator</description>
   
@@ -16,12 +16,13 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-graphx_2.11</artifactId>
-      <version>2.3.2</version>
+      <version>2.4.6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark.graphx.lib</groupId>
-      <artifactId>sophon-graph-kernel-client_2.11</artifactId>
-      <version>1.2.0</version>
+      <artifactId>boostkit-graph-kernel-client_2.11</artifactId>
+      <version>1.3.0</version>
+      <classifier>${spark.version}</classifier>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -29,10 +30,27 @@
       <artifactId>fastutil</artifactId>
       <version>8.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_2.11</artifactId>
+      <version>3.0.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.10.19</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-mllib_2.11</artifactId>
+      <version>2.4.6</version>
+    </dependency>
   </dependencies>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
+    <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>net.alchim31.maven</groupId>
@@ -63,13 +81,31 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest-maven-plugin</artifactId>
+        <version>1.0</version>
+        <configuration>
+          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+          <junitxml>.</junitxml>
+          <filereports>TestSuite.txt</filereports>
+        </configuration>
+        <executions>
+          <execution>
+            <id>test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.scalastyle</groupId>
         <artifactId>scalastyle-maven-plugin</artifactId>
         <version>1.0.0</version>
         <configuration>
           <verbose>false</verbose>
           <failOnViolation>true</failOnViolation>
-          <includeTestSourceDirectory>false</includeTestSourceDirectory>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <failOnWarning>false</failOnWarning>
           <sourceDirectory>src/main/scala</sourceDirectory>
           <configLocation>${project.basedir}/../scalastyle-config.xml</configLocation>
@@ -82,6 +118,30 @@
             <goals>
               <goal>check</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <archive>
+            <addMavenDescriptor>false</addMavenDescriptor>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>${spark.version}</classifier>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-jar</id>
+            <phase>none</phase>
           </execution>
         </executions>
       </plugin>
