--- a/graph-kernel/pom.xml
+++ b/graph-kernel/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.apache.spark</groupId>
-    <artifactId>sophon-graph</artifactId>
-    <version>1.2.0</version>
+    <artifactId>boostkit-graph</artifactId>
+    <version>1.3.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.spark.graphx.lib</groupId>
-  <artifactId>sophon-graph-kernel-client_2.11</artifactId>
-  <version>1.2.0</version>
+  <artifactId>boostkit-graph-kernel-client_2.11</artifactId>
+  <version>1.3.0</version>
   <name>${project.artifactId}</name>
   <description>Spark graph algo client</description>
   <inceptionYear>2020</inceptionYear>
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-graphx_2.11</artifactId>
-      <version>2.3.2</version>
+      <version>2.4.6</version>
     </dependency>
   </dependencies>
   <build>
@@ -43,6 +43,31 @@
                 <arg>${project.build.directory}/.scala_dependencies</arg>
               </args>
             </configuration>
+          </execution>
+        </executions>
+       </plugin>
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <archive>
+            <addMavenDescriptor>false</addMavenDescriptor>
+          </archive>
+        </configuration>
+
+        <executions>
+          <execution>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <classifier>${spark.version}</classifier>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-jar</id>
+            <phase>none</phase>
           </execution>
         </executions>
       </plugin>
