--- a/graph-accelerator/pom.xml
+++ b/graph-accelerator/pom.xml
@@ -2,33 +2,35 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>boostkit-graph</artifactId>
-    <version>2.2.0</version>
+    <version>3.0.0</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.spark.graphx.lib</groupId>
   <artifactId>boostkit-graph-acc_2.12</artifactId>
-  <version>2.2.0</version>
+  <version>3.0.0</version>
   <name>${project.artifactId}</name>
   <description>Spark graph algo accelerator</description>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-graphx_2.12</artifactId>
-      <version>3.1.1</version>
+      <version>3.3.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark.graphx.lib</groupId>
       <artifactId>boostkit-graph-kernel-client_2.12</artifactId>
-      <version>2.2.0</version>
+      <version>3.0.0</version>
       <classifier>${spark.version}</classifier>
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>it.unimi.dsi</groupId>
       <artifactId>fastutil</artifactId>
       <version>8.3.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
@@ -40,11 +42,13 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>1.10.19</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-mllib_2.12</artifactId>
-      <version>3.1.1</version>
+      <version>3.3.1</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
