--- a/graph-core/pom.xml
+++ b/graph-core/pom.xml
@@ -2,13 +2,13 @@
     <parent>
         <groupId>org.apache.spark</groupId>
         <artifactId>boostkit-graph</artifactId>
-        <version>2.2.0</version>
+        <version>3.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 <!--    <groupId>org.apache.spark.graphx.lib</groupId>-->
     <artifactId>boostkit-graph-core_2.12</artifactId>
-    <version>2.2.0</version>
+    <version>3.0.0</version>
     <name>${project.artifactId}</name>
     <description>Spark graph core</description>
 
@@ -16,7 +16,8 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-graphx_2.12</artifactId>
-            <version>3.1.1</version>
+            <version>3.3.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
@@ -25,14 +26,22 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>1.10.19</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.12</artifactId>
-            <version>3.1.1</version>
+            <version>3.3.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
