--- a/graph-kernel/pom.xml
+++ b/graph-kernel/pom.xml
@@ -2,15 +2,15 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>boostkit-graph</artifactId>
-    <version>2.2.0</version>
+    <version>3.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.spark.graphx.lib</groupId>
   <artifactId>boostkit-graph-kernel-client_2.12</artifactId>
-  <version>2.2.0</version>
+  <version>3.0.0</version>
   <name>${project.artifactId}</name>
   <description>Spark graph algo client</description>
-  <inceptionYear>2020</inceptionYear>
+  <inceptionYear>2022</inceptionYear>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -21,7 +21,8 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-graphx_2.12</artifactId>
-      <version>3.1.1</version>
+      <version>3.3.1</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
